--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-header class="block header"></app-header>
-<app-schedule-table-creator></app-schedule-table-creator>
+<router-outlet></router-outlet>
 
 <script>
   window.onload = function() {
