--- a/src/app/dashboard/admin/schedule-table-creator/teacher/teacher.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/teacher/teacher.component.html
@@ -1,5 +1,5 @@
 <div class="control-section rounded-2xl">
-  <ejs-grid [dataSource]='data' [pageSettings]='pageSettings' [allowSorting]='true' [editSettings]='editSettings' [toolbar]='toolbar' (actionBegin)="actionBegin($event)">
+  <ejs-grid [dataSource]='data' [allowSorting]='true' [editSettings]='editSettings' [toolbar]='toolbar' (actionBegin)="actionBegin($event)">
     <e-columns>
       <e-column field='name' headerText='Teacher name' width='120' [validationRules]='customeridrules' allowEditing='true'></e-column>
       <e-column field='surname' headerText='Teacher surname' width='120' format='C2' [validationRules]='freightrules'></e-column>
