--- a/src/app/dashboard/header/header.component.css
+++ b/src/app/dashboard/header/header.component.css
@@ -46,7 +46,7 @@
 }
 
 .e-ddb-icons {
-  font-family: 'e-ddb-icons';
+  font-family: 'e-ddb-icons', serif;
   speak: none;
   font-size: 55px;
   font-style: normal;
