--- a/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
@@ -17,10 +17,10 @@
                          name="name" placeholder="Group name"></ejs-textbox>
           </div>
           <div class="form-group col-md-6">
-            <ejs-numerictextbox [min]='1' [step]='1' [value]='data?.quantity' class="e-field e-defaultcell e-control e-textbox e-lib" data-name="quantity"
+            <ejs-numerictextbox [min]='1' [max]='200' [value]='data?.quantity' class="e-field e-defaultcell e-control e-textbox e-lib" data-name="quantity"
                                 floatLabelType='Always' format='n0'
                                 id="quantity"
-                                name="quantity" placeholder="Group name"></ejs-numerictextbox>
+                                name="quantity" placeholder="Quantity"></ejs-numerictextbox>
 
           </div>
         </div>
