--- a/src/app/dashboard/groups/groups.component.html
+++ b/src/app/dashboard/groups/groups.component.html
@@ -25,7 +25,7 @@
         </e-accordionitem>
       </e-accordionitems>
     </ejs-accordion>
-    <app-schedule *ngIf="selectedGroup && selectedGroupScheduleCells" [selectedGroup]="selectedGroup" [selectedGroupScheduleCells]="selectedGroupScheduleCells" [scheduleData]="scheduleData"></app-schedule>
+    <app-schedule *ngIf="selectedGroup && selectedGroupScheduleCells"></app-schedule>
 
 
   </div>
