--- a/src/app/dashboard/my-schedule/my-schedule.component.html
+++ b/src/app/dashboard/my-schedule/my-schedule.component.html
@@ -6,16 +6,21 @@
   <div class="mb-4" *ngFor="let schedule of mySchedules | async">
     <div class="rounded-lg border bg-card text-card-foreground shadow-sm" data-v0-t="card">
       <div class="p-6">
-        <div class="flex justify-between items-center">
+        <div class="flex items-center justify-between">
           <div>
             <h2 class="text-lg font-semibold">{{schedule.name}}</h2>
             <p class="text-sm text-gray-500">{{schedule.updatedAt}}</p>
           </div>
-          <div class="inline-flex w-fit items-center whitespace-nowrap rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
-               [routerLink]="['.', schedule.id]">
-          >
-            Open spots available
+          <div class="flex justify-between">
+            <div ejs-button class="inline-flex w-fit items-center mx-4"
+                 [routerLink]="['.', schedule.id]">
+              Open schedule
+            </div>
+            <button ejs-button cssClass="e-danger dlgbtn" #confirmButton (click)="confirmBtnClick(schedule.id)">Delete schedule</button>
+
           </div>
+
+
         </div>
       </div>
     </div>
