--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import 'node_modules/@syncfusion/ej2-angular-popups/styles/material.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -326,3 +328,4 @@ form#reactive {
     font-size: 60%;
   }
 }
+
